--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "component": "^1.1.0",
     "firebase": "^7.14.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
@@ -17,7 +18,9 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "style": "^0.0.3",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "./node_modules/react-scripts/bin/react-scripts.js start",
